--- a/moa/src/main/resources/templates/fragments/bodyHeader.html
+++ b/moa/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="bodyHeader">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="rounded px-3 navbar navbar-expand-lg bg-body-tertiary">
         <a class="navbar-brand" href="/"><h3>MOA</h3></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
