--- a/moa/src/main/resources/templates/boards/detail.html
+++ b/moa/src/main/resources/templates/boards/detail.html
@@ -5,13 +5,12 @@
 </head>
 <body>
 
-<div class="container" th:object="${boardForm}">
+<div class="container min-vh-90 h-auto" th:object="${boardForm}">
     <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
     <h3 th:text="*{title}"></h3>
-    <div class="">
+    <div class="border-top border-bottom rounded border-secondary-subtle mb-3 pb-3">
         <div>
-            <textarea class="my-3 " th:field="*{content}" cols="30" rows="10" readonly
-                      style="resize: none;"></textarea>
+            <div class="my-3 w-100 h-auto" th:text="*{content}"></div>
         </div>
         <div>
             <!-- 좋아요 버튼 -->
@@ -23,32 +22,35 @@
         </div>
 
     </div>
-    <hr>
+
     <div>
 
         <!--댓글 작성 공간-->
         <div>
             <form th:action="@{/comments/{boardId}(boardId = ${boardForm.id})}"
-                  class="form-floating d-md-flex justify-content-md-center" th:object="${commentForm}"
+                  class="form-floating d-md-flex justify-content-md-center align-items-center" th:object="${commentForm}"
                   method="post">
-                <textarea class="my-3 form-control" th:field="*{content}" cols="30" rows="4"
+                <textarea class="my-3 me-3 form-control" th:field="*{content}" cols="30" rows="4"
                           style="resize: none;"></textarea>
                 <input class="btn btn-secondary" type="submit" value="작성">
             </form>
         </div>
         <!--댓글 목록-->
-        <div class="border-secondary mb-3" th:each="comment : ${comments}">
-            <div th:text="${comment.member.name}">
+        <div th:each="comment : ${comments}" class="row ">
+            <div th:class="'mb-3 ' + ${comment.parent == null ? 'col-md-12':'col-md-11 offset-md-1'}">
+                <div th:text="${comment.member.name}">
+                </div>
+                <div th:text="${comment.content}"></div>
+                <div class="d-md-flex text-secondary fs-7">
+                    <span th:text="${comment.commentDate}"></span>
+                    <a th:class="ms-5" th:href="@{/comments/{boardId}/{parentId}(boardId = ${boardForm.id}, parentId = ${comment.parent?.id ?: comment.id})}"
+                       class="link-underline-opacity-0">
+                        <img src="/image/arrow-return-right.svg" alt="대댓글">
+                    </a>
+
+                </div>
+                <hr>
             </div>
-            <div class="d-md-flex justify-content-md-between">
-                <span th:text="${comment.content}"></span>
-                <a th:href="@{/comments/{boardId}/{parentId}(boardId = ${boardForm.id}, parentId = ${comment.id})}"
-                   class="link-underline-opacity-0">
-                    <img src="/image/arrow-return-right.svg" alt="대댓글">
-                </a>
-            </div>
-            <div th:text="${comment.commentDate}"></div>
-            <hr>
         </div>
     </div>
 
