--- a/moa/src/main/resources/templates/index.html
+++ b/moa/src/main/resources/templates/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/header::header}">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<div class="container">
+<div class="container min-vh-90 h-auto">
     <th:block th:replace="~{fragments/bodyHeader::bodyHeader}"/>
 
 </div>
