--- a/moa/src/main/resources/templates/members/memberForm.html
+++ b/moa/src/main/resources/templates/members/memberForm.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container min-vh-90 h-auto">
     <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
 
     <h3>회원가입</h3>
