--- a/moa/src/main/resources/templates/fragments/bodyHeader.html
+++ b/moa/src/main/resources/templates/fragments/bodyHeader.html
@@ -12,6 +12,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/boards/list">게시판</a>
                 </li>
+                <li class="nav-item" th:if="${session.role == 'ADMIN'}">
+                    <a class="nav-link" href="/admin/members">멤버리스트</a>
+                </li>
             </ul>
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <th:block th:if="${session.user == null}">
@@ -23,6 +26,9 @@
                     </li>
                 </th:block>
                 <th:block th:unless="${session.user == null}">
+                    <li class="nav-item">
+                        <a class="nav-link" th:text="'안녕하세요 ' + ${session.name} + '님'"></a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/members/info">내 정보</a>
                     </li>
