--- a/moa/src/main/resources/templates/boards/list.html
+++ b/moa/src/main/resources/templates/boards/list.html
@@ -13,37 +13,76 @@
             <thead class="table-light">
             <tr>
                 <th>*</th>
-                <th class="col-md-7">제목</th>
-                <th class="col-md-3">날짜</th>
+                <th class="col-md-6">제목</th>
+                <th class="col-md-2">작성자</th>
+                <th class="col-md-2">날짜</th>
             </tr>
             </thead>
             <tbody class="table-group-divider">
-            <th:block th:if="not ${boards.size()}">
+            <th:block th:if="not ${boards.size}">
                 <tr>
                     <td class="text-center" colspan="3">첫 게시글을 남겨주세요!</td>
                 </tr>
             </th:block>
             <tr th:each="board : ${boards}">
                 <td class="col-md-2" th:text="${board.id}"></td>
-                <td class="col-md-7">
+                <td class="col-md-6">
                     <a th:href="@{/boards/{boardId}(boardId = ${board.id})}"
-                        class="text-dark link-underline-secondary link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover">
+                       class="text-dark link-underline-secondary link-offset-2 link-underline-opacity-0 link-underline-opacity-75-hover">
                         <span th:text="${board.title}"></span>
                         <span class="text-danger text-opacity-75" th:text="'[ '+${board.comments.size}+' ]'"></span>
                     </a>
                 </td>
-                <td class="col-md-3" th:text="${board.postDate}"></td>
+                <td class="col-md-2" th:text="${board.member.name}"></td>
+                <td class="col-md-2" th:text="${board.postDate}"></td>
             </tr>
 
             </tbody>
         </table>
-        <div class="d-flex justify-content-end">
+        <div class="d-md-flex justify-content-end">
             <a href="/boards/new">
                 <button class="btn btn-primary">글쓰기</button>
             </a>
         </div>
-    </div>
+        <br>
+        <ul class="pagination justify-content-md-center">
+            <!-- 첫번째 페이지로 이동 -->
+            <li class="page-item">
+                <a class="page-link" th:href="@{/boards/list(page=1)}">처음</a></li>
 
+            <!-- 이전 링크 활성화 비활성화 -->
+            <li class="page-item">
+                <a class="page-link"
+                   th:href="${boards.first} ? '#' : @{/boards/list(page=${boards.number})}">이전</a>
+            </li>
+
+            <!-- 페이지 번호 링크(현재 페이지는 숫자만)
+                    for(int page=startPage; page<=endPage; page++)-->
+            <th:block th:each="page: ${#numbers.sequence(startPage, endPage)}">
+
+                <li class="page-item">
+                    <!-- 현재페이지는 링크 없이 숫자만 -->
+                    <span th:if="${page == boards.number + 1}" class="page-link active"
+                          th:text="${page}"></span>
+
+                    <!-- 현재페이지 링크 X, 다른 페이지번호에는 링크를 보여준다 -->
+                    <a th:unless="${page == boards.number + 1}" class="page-link"
+                       th:href="@{/boards/list(page=${page})}" th:text="${page}"></a>
+                </li>
+            </th:block>
+
+            <!-- 다음 링크 활성화 비활성화 -->
+            <li class="page-item">
+                <a class="page-link"
+                   th:href="${boards.last} ? '#' : @{/boards/list(page=${boards.number + 2})}">다음</a>
+            </li>
+
+            <!-- 마지막 페이지로 이동 -->
+            <li class="page-item">
+                <a class="page-link" th:href="@{/boards/list(page=${boards.totalPages})}">마지막</a>
+            </li>
+        </ul>
+    </div>
 
 </div>
 <div th:replace="~{fragments/footer :: footer}"></div>
