--- a/moa/src/main/resources/templates/fragments/bodyHeader.html
+++ b/moa/src/main/resources/templates/fragments/bodyHeader.html
@@ -16,7 +16,7 @@
             <ul class="navbar-nav mb-2 mb-lg-0">
                 <th:block th:if="${session.user == null}">
                     <li class="nav-item">
-                        <a class="nav-link" href="/members/login">로그인</a>
+                        <a class="nav-link" href="/login">로그인</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/members/new">회원가입</a>
@@ -28,7 +28,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="/members/logout">로그아웃</a>
+                        <a class="nav-link" href="/logout">로그아웃</a>
                     </li>
                 </th:block>
             </ul>
