--- a/moa/src/main/resources/templates/index.html
+++ b/moa/src/main/resources/templates/index.html
@@ -8,9 +8,9 @@
 <div class="container min-vh-90 h-auto">
     <th:block th:replace="~{fragments/bodyHeader::bodyHeader}"/>
 
-    <a href="http://localhost:8080/beforeTest/10">before테스트 : 일반로직</a>
+    <a href="/jpaTest/10">jpa 테스트 : 일반로직</a>
     <div></div>
-    <a href="http://localhost:8080/afterTest/10">__after테스트 : 프로시저</a>
+    <a href="/spTest/10">stored procedure 테스트</a>
 </div>
 <th:block th:replace="~{fragments/footer::footer}"/>
 </body>
