--- a/moa/src/main/resources/templates/boards/detail.html
+++ b/moa/src/main/resources/templates/boards/detail.html
@@ -20,7 +20,7 @@
                       method="post">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                     <!-- 누적 좋아요 수 -->
-                    <button type="submit" class="btn btn-primary" th:text=" ${likeCount} + '개'">
+                    <button type="submit" class="btn btn-primary" th:text="|👍 ${likeCount}개|">
                     </button>
                 </form>
             </div>
@@ -30,7 +30,7 @@
                       method="post">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                     <!-- 누적 싫어요 수 -->
-                    <button type="submit" class="btn btn-primary" th:text=" ${dislikeCount} + '개'">
+                    <button type="submit" class="btn btn-primary" th:text="|👎 ${dislikeCount}개|">
                     </button>
                 </form>
             </div>
@@ -45,7 +45,7 @@
                   class="form-floating d-md-flex justify-content-md-center align-items-center"
                   th:object="${commentForm}"
                   method="post">
-                <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                 <textarea class="my-3 me-3 form-control" th:field="*{content}" cols="30" rows="4"
                           style="resize: none;"></textarea>
                 <label sec:authorize="isAnonymous()" th:for="content" class="form-label">로그인 후 작성 가능합니다.</label>
