--- a/moa/src/main/resources/templates/members/memberForm.html
+++ b/moa/src/main/resources/templates/members/memberForm.html
@@ -10,7 +10,7 @@
 
     <h3>회원가입</h3>
     <form action="/members/new" th:object="${memberForm}" method="post">
-        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div class="form-floating mb-3">
             <div class="mb-3">
                 <input type="text" th:class="'form-control ' + (${joinFail} ? 'border border-danger' : '')"
