--- a/moa/src/main/resources/templates/test/testJpaDetail.html
+++ b/moa/src/main/resources/templates/test/testJpaDetail.html
@@ -15,8 +15,9 @@
         <div style="display: flex; justify-content: flex-start;">
             <div>
                 <!-- 좋아요 버튼 -->
-                <form class="form-floating" th:action="@{/afterTest/{boardId}/like(boardId=${boardForm.id})}"
+                <form class="form-floating" th:action="@{/jpaTest/{boardId}/like(boardId=${boardForm.id})}"
                       method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                     <button type="submit" class="btn btn-primary">
                         <!-- 누적 좋아요 수 -->
                         👍 <span th:text=" ${likeCount} + '개'"></span>
@@ -25,8 +26,9 @@
             </div>
             <div style="margin-left: 10px;">
                 <!-- 싫어요 버튼 -->
-                <form class="form-floating " th:action="@{/afterTest/{boardId}/dislike(boardId=${boardForm.id})}"
+                <form class="form-floating " th:action="@{/jpaTest/{boardId}/dislike(boardId=${boardForm.id})}"
                       method="post">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                     <button type="submit" class="btn btn-primary">
                         <!-- 누적 싫어요 수 -->
                         👎 <span th:text=" ${dislikeCount} + '개'"></span>
@@ -60,7 +62,7 @@
                 <div class="d-md-flex text-secondary fs-7">
                     <span th:text="${#temporals.format(comment.commentDate, 'yyyy.MM.dd HH:mm')}"></span>
                     <a th:class="ms-5"
-                       th:href="@{/afterTest/{boardId}/{parentId}(boardId = ${boardForm.id}, parentId = ${comment.parent?.id ?: comment.id})}"
+                       th:href="@{/beforeTest/{boardId}/{parentId}(boardId = ${boardForm.id}, parentId = ${comment.parent?.id ?: comment.id})}"
                        class="link-underline-opacity-0">
                         <img src="/image/arrow-return-right.svg" alt="대댓글">
                     </a>
