--- a/moa/src/main/resources/templates/test/testSpDetail.html
+++ b/moa/src/main/resources/templates/test/testSpDetail.html
@@ -4,6 +4,7 @@
     <title>Detail</title>
 </head>
 <body>
+<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
 
 <div class="container min-vh-90 h-auto" th:object="${boardForm}">
     <div th:replace="~{fragments/bodyHeader :: bodyHeader}"></div>
@@ -15,21 +16,21 @@
         <div style="display: flex; justify-content: flex-start;">
             <div>
                 <!-- 좋아요 버튼 -->
-                <form class="form-floating" th:action="@{/beforeTest/{boardId}/like(boardId=${boardForm.id})}"
+                <form class="form-floating" th:action="@{/spTest/{boardId}/like(boardId=${boardForm.id})}"
                       method="post">
                     <button type="submit" class="btn btn-primary">
                         <!-- 누적 좋아요 수 -->
-                        👍 <span th:text=" ${likeCount} + '개'"></span>
+                        <span th:text="|👍 ${likeCount}개|"></span>
                     </button>
                 </form>
             </div>
             <div style="margin-left: 10px;">
                 <!-- 싫어요 버튼 -->
-                <form class="form-floating " th:action="@{/beforeTest/{boardId}/dislike(boardId=${boardForm.id})}"
+                <form class="form-floating " th:action="@{/spTest/{boardId}/dislike(boardId=${boardForm.id})}"
                       method="post">
                     <button type="submit" class="btn btn-primary">
                         <!-- 누적 싫어요 수 -->
-                        👎 <span th:text=" ${dislikeCount} + '개'"></span>
+                        <span th:text="|👎 ${dislikeCount}개|"></span>
                     </button>
                 </form>
             </div>
@@ -60,7 +61,7 @@
                 <div class="d-md-flex text-secondary fs-7">
                     <span th:text="${#temporals.format(comment.commentDate, 'yyyy.MM.dd HH:mm')}"></span>
                     <a th:class="ms-5"
-                       th:href="@{/beforeTest/{boardId}/{parentId}(boardId = ${boardForm.id}, parentId = ${comment.parent?.id ?: comment.id})}"
+                       th:href="@{/afterTest/{boardId}/{parentId}(boardId = ${boardForm.id}, parentId = ${comment.parent?.id ?: comment.id})}"
                        class="link-underline-opacity-0">
                         <img src="/image/arrow-return-right.svg" alt="대댓글">
                     </a>
