--- a/moa/src/main/resources/templates/members/memberForm.html
+++ b/moa/src/main/resources/templates/members/memberForm.html
@@ -12,15 +12,13 @@
     <form action="/members/new" th:object="${memberForm}" method="post">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div class="form-floating mb-3">
-            <div class="mb-3">
-                <input type="text" th:class="'form-control ' + (${joinFail} ? 'border border-danger' : '')"
-                       th:field="*{name}">
-                <label th:for="name" class="form-label" th:text="${joinFail} ? ${joinFail} : '이름'"></label>
-            </div>
-            <div class="mb-3">
-                <input type="text" class="form-control" th:field="*{password}">
-                <label th:for="password" class="form-label">비밀번호</label>
-            </div>
+            <input type="text" th:class="'form-control ' + (${joinFail} ? 'border border-danger' : '')"
+                   th:field="*{name}">
+            <label th:for="name" class="form-label" th:text="${joinFail} ? ${joinFail} : '이름'"></label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="password" class="form-control" th:field="*{password}">
+            <label th:for="password" class="form-label">비밀번호</label>
         </div>
         <button type="submit" class="btn btn-primary">가입하기</button>
     </form>
